--- a/TP01.qsf
+++ b/TP01.qsf
@@ -254,11 +254,12 @@ set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name ENABLE_SIGNALTAP OFF
-set_global_assignment -name USE_SIGNALTAP_FILE output_files/test_dma.stp
+set_global_assignment -name USE_SIGNALTAP_FILE output_files/stp1.stp
 set_global_assignment -name VHDL_FILE DMA_LCD_ctrl.vhd
 set_global_assignment -name VHDL_FILE LCD.vhd
 set_global_assignment -name QSYS_FILE sopc.qsys
 set_global_assignment -name BDF_FILE TP01.bdf
 set_global_assignment -name VHDL_FILE GPIO.vhd
 set_global_assignment -name SIGNALTAP_FILE output_files/test_dma.stp
+set_global_assignment -name SIGNALTAP_FILE output_files/stp1.stp
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
