--- a/software/test_dma/.cproject
+++ b/software/test_dma/.cproject
@@ -87,4 +87,9 @@
 			</target>
 		</buildTargets>
 	</storageModule>
+	<storageModule moduleId="refreshScope" versionNumber="2">
+		<configuration configurationName="Nios II">
+			<resource resourceType="PROJECT" workspacePath="/test_dma"/>
+		</configuration>
+	</storageModule>
 </cproject>
