--- a/software/test_dma/Makefile
+++ b/software/test_dma/Makefile
@@ -142,7 +142,8 @@ ACDS_VERSION := 16.0
 ELF := test_dma.elf
 
 # Paths to C, C++, and assembly source files.
-C_SRCS := hello_world.c
+C_SRCS += hello_world.c
+C_SRCS += Image.c
 CXX_SRCS :=
 ASM_SRCS :=
 
